Refactor code structure for improved readability and maintainability

--- a/Documents/project_proposal.tex
+++ b/Documents/project_proposal.tex
@@ -2,6 +2,8 @@
 \usepackage[a4paper,margin=1in]{geometry}
 \usepackage{lmodern}
 \usepackage{hyperref}
+\usepackage{svg}
+\usepackage{graphicx}
 \hypersetup{colorlinks=true, urlcolor=blue}
 
 \begin{document}
@@ -40,6 +42,18 @@ ConversaAI will simulate a conversational English partner. The system will:
     \item Suggest improved phrasing to promote fluency
     \item Optionally, support speech recognition and text-to-speech for a more immersive experience
 \end{itemize}
+
+\section*{Use Case Diagram}
+
+The following diagram illustrates the key use cases of the ConversaAI system and how the user interacts with it:
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{use_case_diag.pdf}
+    \caption{Use Case Diagram for ConversaAI}
+    \label{fig:use_case_diagram}
+\end{figure}
+
 
 \section*{Technology Stack and Rationale}
 
