Refactor app structure to implement a simple ToDo list feature, replacing ConversaAI with TodoApp. Added task management functionality including adding and removing tasks, and updated UI components accordingly.

--- a/Documents/project_proposal.tex
+++ b/Documents/project_proposal.tex
@@ -57,7 +57,7 @@ The following diagram illustrates the key use cases of the ConversaAI system and
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{use_case_diag.pdf}
+    \includegraphics[width=0.8\textwidth]{Use_case_diagram.png}
     \caption{Use Case Diagram for ConversaAI}
     \label{fig:use_case_diagram}
 \end{figure}
